--- a/css/opening_background.css
+++ b/css/opening_background.css
@@ -1,1 +1,36 @@
-
+img {
+  display: block;
+  margin-left: auto;
+  margin: 15% auto 0px;
+  width: 200px;
+  height: 160px;
+}
+body {
+  background-color: #adff2f;
+}
+#user_id {
+  display: block;
+  margin: 2px auto 0px auto;
+  height: 20px;
+  width: 170px;
+  border-width: 1px 1px 0.5px 1px;
+  border-style: solid;
+  border-bottom-color: #e2e2e2;
+}
+#user_pw {
+  display: block;
+  margin: 0px auto;
+  height: 20px;
+  width: 170px;
+  border-width: 0.5px 1px 1px 1px;
+  border-style: solid;
+  border-top-color: #e2e2e2;
+}
+#login {
+  display: block;
+  margin: 5px auto;
+  width: 175px;
+  height: 30px;
+  background-color: #66971c;
+  color: white;
+}
