--- a/css/opening_background.css
+++ b/css/opening_background.css
@@ -26,7 +26,7 @@ body {
   border-style: solid;
   border-top-color: #e2e2e2;
 }
-#login {
+.login {
   display: block;
   margin: 5px auto;
   width: 175px;
