--- a/css/friends.css
+++ b/css/friends.css
@@ -1,27 +1,19 @@
-header {
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+
+#head {
+  display: block;
   width: 100%;
   height: 50px;
   background-color: darkolivegreen;
 }
-/* Reference: https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
-.sidebar {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-}
-.sidebar a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
+h1 {
+  font-family: "Lato", sans-serif;
   font-size: 25px;
-  color: #818181;
   display: block;
+  color: white;
+  padding-left: 20px;
+  padding-top: 6px;
 }
-.sidebar a:hover {
-  color: #f1f1f1;
+#footer {
+  background-color: darkolivegreen;
 }
