--- a/css/friends.css
+++ b/css/friends.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 50px;
   background-color: darkolivegreen;
+  margin: 0%;
 }
 h1 {
   font-family: "Lato", sans-serif;
@@ -14,6 +15,19 @@ h1 {
   padding-left: 20px;
   padding-top: 6px;
 }
+#profile {
+  width: 100%;
+  background-color: aquamarine;
+}
+#favorites {
+  width: 100%;
+  background-color: antiquewhite;
+}
+#friends {
+  width: 100%;
+  background-color: beige;
+}
 #footer {
+  width: 100%;
   background-color: darkolivegreen;
 }
