--- a/css/friends.css
+++ b/css/friends.css
@@ -3,31 +3,35 @@
 #head {
   display: block;
   width: 100%;
-  height: 50px;
+  height: 35px;
   background-color: darkolivegreen;
-  margin: 0%;
 }
 h1 {
   font-family: "Lato", sans-serif;
-  font-size: 25px;
+  font-size: 20px;
   display: block;
   color: white;
   padding-left: 20px;
-  padding-top: 6px;
+  padding-top: 4px;
 }
 #profile {
   width: 100%;
+  height: 60px;
   background-color: aquamarine;
 }
 #favorites {
   width: 100%;
+  height: 100px;
   background-color: antiquewhite;
 }
 #friends {
   width: 100%;
+  height: 400px;
   background-color: beige;
 }
 #footer {
+  position: fixed;
   width: 100%;
+  height: 60px;
   background-color: darkolivegreen;
 }
