--- a/css/friends.css
+++ b/css/friends.css
@@ -13,10 +13,14 @@ h1 {
   color: white;
   padding-left: 20px;
   padding-top: 4px;
+  margin: 0;
+}
+p {
+  margin: 0;
 }
 #profile {
   width: 100%;
-  height: 60px;
+  height: 80px;
   background-color: aquamarine;
 }
 #favorites {
@@ -26,12 +30,11 @@ h1 {
 }
 #friends {
   width: 100%;
-  height: 400px;
+  height: 490px;
   background-color: beige;
 }
 #footer {
-  position: fixed;
   width: 100%;
-  height: 60px;
+  height: 65px;
   background-color: darkolivegreen;
 }
