--- a/css/friends.css
+++ b/css/friends.css
@@ -30,11 +30,18 @@ p {
 }
 #friends {
   width: 100%;
-  height: 490px;
+  height: 480px;
   background-color: beige;
 }
 #footer {
   width: 100%;
-  height: 65px;
+  height: 75px;
   background-color: darkolivegreen;
+  text-align: center;
+}
+a {
+  display: inline-block;
+  padding-left: 65px;
+  padding-right: 65px;
+  padding-top: 10px;
 }
