--- a/css/friends.css
+++ b/css/friends.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
 #head {
   display: block;
   width: 100%;
@@ -7,7 +7,7 @@
   background-color: darkolivegreen;
 }
 h1 {
-  font-family: "Lato", sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
   font-size: 20px;
   display: block;
   color: white;
@@ -43,5 +43,12 @@ a {
   display: inline-block;
   padding-left: 65px;
   padding-right: 65px;
+  padding-top: 10px;
+}
+#letter {
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: 13px;
+  display: block;
+  margin-left: 20px;
   padding-top: 10px;
 }
