--- a/css/friends.css
+++ b/css/friends.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap");
 #head {
   display: block;
   width: 100%;
@@ -20,7 +21,7 @@ p {
 }
 #profile {
   width: 100%;
-  height: 80px;
+  height: 100px;
   background-color: rgb(253, 253, 253);
 }
 #favorites {
@@ -33,7 +34,7 @@ p {
 }
 #friends {
   width: 100%;
-  height: 480px;
+  height: 460px;
   background-color: rgb(253, 253, 253);
   border-top-width: 0.3px;
   border-top-style: solid;
@@ -45,7 +46,7 @@ p {
   background-color: darkolivegreen;
   text-align: center;
 }
-a {
+#footer a {
   display: inline-block;
   padding-left: 65px;
   padding-right: 65px;
@@ -53,8 +54,20 @@ a {
 }
 #letter {
   font-family: "Nanum Gothic", sans-serif;
-  font-size: 13px;
+  font-size: 12px;
+  color: rgb(58, 58, 58);
   display: block;
   margin-left: 20px;
   padding-top: 10px;
+}
+#profile_picture span #name {
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  display: inline-block;
+}
+#profile_picture span img {
+  margin-left: 20px;
+  padding-top: 10px;
+  border-radius: 5%;
 }
