--- a/css/friends.css
+++ b/css/friends.css
@@ -60,14 +60,27 @@ p {
   margin-left: 20px;
   padding-top: 10px;
 }
-#profile_picture span #name {
-  font-family: "Nanum Gothic", sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  display: inline-block;
+#profile_picture > * {
+  vertical-align: middle;
 }
-#profile_picture span img {
-  margin-left: 20px;
+#name {
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  vertical-align: middle;
+  display: inline-block;
+  padding-left: 10px;
+}
+#message {
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: 13px;
+  font-weight: 550;
+  color: rgb(128, 128, 128);
+  vertical-align: middle;
+}
+#picture {
+  padding-left: 20px;
   padding-top: 10px;
   border-radius: 5%;
+  display: inline-block;
 }
