--- a/css/friends.css
+++ b/css/friends.css
@@ -40,6 +40,14 @@ p {
   border-top-style: solid;
   border-top-color: #829736ce;
 }
+#friends ul {
+  margin: 0;
+  padding: 0;
+}
+#friends ul li {
+  list-style-type: none;
+  vertical-align: middle;
+}
 #footer {
   width: 100%;
   height: 75px;
