--- a/css/chat.css
+++ b/css/chat.css
@@ -27,4 +27,27 @@ h1 {
 #box {
   height: 60px;
   background-color: white;
+  vertical-align: middle;
+}
+#message {
+  width: 80%;
+  height: 40px;
+  display: inline-block;
+  vertical-align: middle;
+  background-color: white;
+  margin-top: 7px;
+}
+#emoticon {
+  width: 50px;
+  height: 40px;
+  vertical-align: middle;
+  margin-top: 7px;
+  background-color: white;
+}
+#enter {
+  width: 50px;
+  height: 40px;
+  vertical-align: middle;
+  margin-top: 7px;
+  background-color: white;
 }
